--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
   "devDependencies": {
     "autoprefixer": "^10.2.4",
     "browser-sync": "^2.26.3",
+    "eslint": "^8.35.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
     "html-validate": "^7.13.2",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.5",
